@startuml

left to right direction

component ViewActorComponent {
  class ViewActor << object >>
  interface ViewActorCommand << trait >>
  class Display extends ViewActorCommand
  class StartPressed << object >> extends ViewActorCommand
  class StopPressed << object >> extends ViewActorCommand
}

component ControllerActorComponent {
  class ControllerActor << object >>
  interface ControllerActorCommand << trait >>
  class Start << object >> extends ControllerActorCommand
  class Stop << object >> extends ControllerActorCommand
  class SetView extends ControllerActorCommand
  class SimulationStateAdaptedResponse extends ControllerActorCommand
  class Tick << object >> extends ControllerActorCommand
}

component SimulationManagerActorComponent {
  class SimulationManagerActor << object >>
  interface SimulationManagerActorCommand << trait >>
  class StartSimulation << object >> extends SimulationManagerActorCommand
  class StopSimulation << object >> extends SimulationManagerActorCommand
  class IterationStep << object >> extends SimulationManagerActorCommand
  class CelestialBodyState extends SimulationManagerActorCommand
  class AskSimulationState extends SimulationManagerActorCommand
  class SimulationStateResponse
}
AskSimulationState --> SimulationStateResponse : use
ControllerActor ..> SimulationStateResponse

component CelestialBodyActorComponent {
  class CelestialBodyActor << object >>
  interface CelestialBodyActorCommand << trait >>
  class GetCelestialBodyState extends CelestialBodyActorCommand
  class UpdateCelestialBodyType extends CelestialBodyActorCommand
  class MoveToNextPosition extends CelestialBodyActorCommand
  class SolveCollisions extends CelestialBodyActorCommand
  class Kill << object >> extends CelestialBodyActorCommand
}

ViewActor ..> ViewActorCommand
ControllerActor --> ControllerActorCommand : use
SimulationManagerActor --> SimulationManagerActorCommand : use
CelestialBodyActor ..> CelestialBodyActorCommand

ViewActor --> ControllerActorCommand : use
ControllerActor --> ViewActorCommand : use
ControllerActor --> SimulationManagerActorCommand : use
SimulationManagerActor --> CelestialBodyActorCommand : use

@enduml
